--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,11 @@
       "name": "app.grpc.server.port",
       "type": "java.lang.Integer",
       "description": "gRPC server port."
-  }
-] }
+    },
+    {
+      "name": "app.jwt.expirationTime",
+      "type": "java.lang.Integer",
+      "description": "JWT life time in seconds."
+    }
+  ]
+}
