--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,4 +4,4 @@ app:
       port: 50051
   jwt:
     expirationTime: 43200
-    secret-key: secret
+    secret-key: secretsecretsecretsecretsecretsecretsecret
